Fixed some unregistered layout bugs

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .contact {
   width: 100%;
   height: 100%;
@@ -74,13 +78,16 @@ h1 {
   }
   .form {
     width: 100vmin;
-    margin: 20px
+    margin: 20px;
   }
-  .image{
+  .image {
     width: 100%;
   }
-  .image img{
+  .image img {
     border-radius: 0%;
     /* height: 100%; */
+  }
+  button {
+    width: 80px;
   }
 }
